--- a/date/2025-11/page-2.htm
+++ b/date/2025-11/page-2.htm
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-7-free-subscribe-node.htm" title="免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-2-free-node-subscribe.htm" title="免费Clash SSR - 12月2日19.5M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 12月2日19.5M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-4-free-v2ray-subscribe.htm" title="免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-v2ray-subscribe.htm" title="免费Clash SSR - 12月8日19.2M/S|免费V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 12月8日19.2M/S|免费V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-21-free-node-subscribe.htm" title="免费Clash SSR - 12月21日20M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 12月21日20M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-11-free-high-speed-nodes.htm" title="免费Clash SSR - 11月11日21.1M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 11月11日21.1M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-18-free-node-subscribe-links.htm" title="免费Clash SSR - 11月18日19.2M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点订阅分享">免费Clash SSR - 11月18日19.2M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-19-free-v2ray.htm" title="免费Clash SSR - 11月19日18M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月19日18M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-9-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月9日20.6M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 11月9日20.6M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-14-free-subscribe-node.htm" title="免费Clash SSR - 12月14日21.7M/S|免费Clash节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 12月14日21.7M/S|免费Clash节点/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-22-free-v2ray.htm" title="免费Clash SSR - 11月22日20.5M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 11月22日20.5M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月10日21.2M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 11月10日21.2M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-3-node-share.htm" title="免费Clash SSR - 12月3日22.3M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 12月3日22.3M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-31-node-share.htm" title="免费Clash SSR - 12月31日21.3M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 12月31日21.3M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-4-free-v2ray-subscribe.htm" title="免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-26-free-subscribe-node.htm" title="免费Clash SSR - 12月26日21.4M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 12月26日21.4M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-23-free-node-subscribe-links.htm" title="免费Clash SSR - 11月23日20.2M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 11月23日20.2M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-6-free-high-speed-nodes.htm" title="免费Clash SSR - 12月6日21.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点节点订阅分享">免费Clash SSR - 12月6日21.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-28-node-share-links.htm" title="免费Clash SSR - 11月28日22.7M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 11月28日22.7M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +308,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
