--- a/date/2025-12/page-3.htm
+++ b/date/2025-12/page-3.htm
@@ -137,6 +137,76 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-12-6-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/246d752b0cd257f4d6be3a247a8989a4.webp" alt="免费Clash SSR - 12月6日21.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-12-6-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 12月6日21.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了加拿大、美国、香港、日本、韩国、新加坡、欧洲等地区,最高速度可达21.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-12-5-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/fe2628acb9303137eef6c0dc0314c1ba.webp" alt="免费Clash SSR - 12月5日18.1M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-12-5-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 12月5日18.1M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了新加坡、日本、加拿大、美国、韩国、欧洲、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-12-4-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/68a9d6caab9c920ad9aa89cc7ae091b1.webp" alt="免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-12-4-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了日本、美国、欧洲、韩国、新加坡、香港、加拿大等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-12-3-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/58ea9c0795c5e014ff8cacb706be34ae.webp" alt="免费Clash SSR - 12月3日22.3M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-12-3-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 12月3日22.3M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了香港、美国、韩国、欧洲、新加坡、日本、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-12-2-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/878c9b9c0fb633f5166aa13fce152680.webp" alt="免费Clash SSR - 12月2日19.5M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-12-2-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 12月2日19.5M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、韩国、日本、新加坡、加拿大、欧洲、香港等地区,最高速度可达19.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-12-01">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-12-1-node-share-links.htm" class="xcblog-blog-url">
@@ -161,16 +231,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-30-free-node-subscribe.htm" title="免费Clash SSR - 11月30日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 11月30日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-node-subscribe.htm" title="免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-13-free-node-subscribe-links.htm" title="免费Clash SSR - 12月13日22.7M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 12月13日22.7M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-17-node-share.htm" title="免费Clash SSR - 11月17日21.4M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 11月17日21.4M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-8-free-v2ray-subscribe.htm" title="免费Clash SSR - 12月8日19.2M/S|免费V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 12月8日19.2M/S|免费V2ray节点/Clash节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-19-free-v2ray.htm" title="免费Clash SSR - 11月19日18M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月19日18M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-18-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 12月18日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 12月18日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-1-node-share-links.htm" title="免费Clash SSR - 12月1日20.8M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 12月1日20.8M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-20-free-node-subscribe-links.htm" title="免费Clash SSR - 12月20日19.7M/S|免费Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/SSR节点节点订阅分享">免费Clash SSR - 12月20日19.7M/S|免费Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-22-node-share-links.htm" title="免费Clash SSR - 12月22日21.7M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 12月22日21.7M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-9-free-high-speed-nodes.htm" title="免费Clash SSR - 12月9日22.3M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 12月9日22.3M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-21-free-node-subscribe.htm" title="免费Clash SSR - 12月21日20M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 12月21日20M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-free-high-speed-nodes.htm" title="免费Clash SSR - 11月11日21.1M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 11月11日21.1M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-15-node-share.htm" title="免费Clash SSR - 12月15日18.7M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 12月15日18.7M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-28-node-share-links.htm" title="免费Clash SSR - 11月28日22.7M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 11月28日22.7M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-7-free-subscribe-node.htm" title="免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-10-node-share.htm" title="免费Clash SSR - 12月10日20.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 12月10日20.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-9-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月9日20.6M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 11月9日20.6M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-1-free-node-subscribe.htm" title="免费Clash SSR - 1月1日19.1M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 1月1日19.1M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -182,7 +252,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
