--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -137,60 +137,60 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-08">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/c94474226b24ec9caf8b44f650d14f51.webp" alt="免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享" style="width:100%;">
+                                <a href="/free-nodes/2025-11-8-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/1313d753462d23889ee6703bccfff3bd.webp" alt="免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
+                                <a href="/free-nodes/2025-11-8-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享                                    </h3>
+                                        免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享                                    </h3>
                                 </a>
-                                <p>这一次的节点更新覆盖了韩国、加拿大、香港、日本、美国、新加坡、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                <p>这一次的节点更新覆盖了新加坡、日本、加拿大、欧洲、韩国、香港、美国等地区,最高速度可达22.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-07">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-5-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享" style="width:100%;">
+                                <a href="/free-nodes/2025-11-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/f6645139de73ca6b8872f0a29427a2f9.webp" alt="免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-5-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <a href="/free-nodes/2025-11-7-free-subscribe-node.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享                                    </h3>
+                                        免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享                                    </h3>
                                 </a>
-                                <p>这一次的节点更新覆盖了美国、新加坡、加拿大、韩国、香港、日本、欧洲等地区,最高速度可达21 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                <p>这一次的节点更新覆盖了日本、美国、欧洲、加拿大、新加坡、韩国、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-06">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/e890e73aa6daf2aed8f18dde405a07b2.webp" alt="免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享" style="width:100%;">
+                                <a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/878c9b9c0fb633f5166aa13fce152680.webp" alt="免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享                                    </h3>
+                                        免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享                                    </h3>
                                 </a>
-                                <p>这一次的节点更新覆盖了韩国、美国、欧洲、日本、新加坡、加拿大、香港等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                <p>这一次的节点更新覆盖了日本、新加坡、韩国、香港、加拿大、欧洲、美国等地区,最高速度可达22.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-05">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享" style="width:100%;">
+                                <a href="/free-nodes/2025-11-5-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/e890e73aa6daf2aed8f18dde405a07b2.webp" alt="免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <a href="/free-nodes/2025-11-5-free-node-subscribe.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享                                    </h3>
+                                        免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享                                    </h3>
                                 </a>
-                                <p>这一次的节点更新覆盖了加拿大、美国、新加坡、香港、日本、韩国、欧洲等地区,最高速度可达22.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                <p>这一次的节点更新覆盖了新加坡、日本、欧洲、香港、加拿大、韩国、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
                         
@@ -203,16 +203,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-30-free-node-subscribe.htm" title="免费Clash SSR - 11月30日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 11月30日18.6M/S|免费SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-high-speed-nodes.htm" title="免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-high-speed-nodes.htm" title="免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享">免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-18-node-share-links.htm" title="免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享">免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share-links.htm" title="免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月6日22.7M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月3日19.3M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 11月3日19.3M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-node-subscribe.htm" title="免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-23-free-node-subscribe-links.htm" title="免费Clash SSR - 11月23日20.2M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 11月23日20.2M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-22-node-share-links.htm" title="免费Clash SSR - 12月22日21.7M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 12月22日21.7M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" title="免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-node-share-links.htm" title="免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-11-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 12月11日19.5M/S|免费Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 12月11日19.5M/S|免费Clash节点/SSR节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-4-free-v2ray-subscribe.htm" title="免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 12月4日20.1M/S|免费Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-31-node-share.htm" title="免费Clash SSR - 12月31日21.3M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 12月31日21.3M/S|免费SSR节点/V2ray节点/Shadowrocket节点/Clash节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月10日21.2M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 11月10日21.2M/S|免费V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-4-free-subscribe-node.htm" title="免费Clash SSR - 1月4日18.9M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 1月4日18.9M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-2-free-node-subscribe.htm" title="免费Clash SSR - 12月2日19.5M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 12月2日19.5M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -224,13 +224,13 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                     </ul>
     </div>
